--- a/sec/bijections.tex
+++ b/sec/bijections.tex
@@ -503,7 +503,7 @@ are mapped to $\SU(n)$ conditions corresponding to paths, e.g. the prior maps to
 \end{align*}
 
 \end{example}
-Note that $\theta$ is not equal to the composite $\LAD \xrightarrow{f} \EC \xrightarrow{o'} \SUD$.
+Note the composite $\LAD \xrightarrow{f} \EC \xrightarrow{o'} \SUD$ provides another bijection of facets, however this map is not equal to $\theta$ and is not defined on the other faces.
 
 
 \subsubsection{Vertices}
@@ -809,15 +809,33 @@ This corresponds to combining the top two arrows in the leftmost arrows of the d
 
 \Kurt{Starting to rewrite as discussed, making whole extra section now so we can check and compare for errors}
 
-In this section we show that the $I,J$ description of $\SUD$ is equivalent to the original description of Saneblidze--Umble diagonal \cite{SaneblidzeUmble04}. Hence, with the prior bijection $\theta:\LAD\to \SUD$  \cref{p:IJ level bijection} this completes the proof that the two diagonals are in bijection. We first recall the construction of the $\SU$ diagonal from shifts of strong complementary partitions, using the definitions of \cite{saneblidzeComparingDiagonalsAssociahedra2022}.
+\Kurt{Want to check everything works first then will clean up notation}
+
+\Kurt{What do we want subscripts? superscripts? indices and/or sets?}
+
+In this section we show that the $I,J$ description of $\SUD$, referred to as $\SUD$, is equivalent to the original description of Saneblidze--Umble diagonal \cite{SaneblidzeUmble04}, referred to as subset shift $\SUD$. Explicitly we will fully detail the two bijections of the top row of the following commutative diagram, ... and ...
+\begin{center}
+\begin{tikzcd}
+\text{Subset Shift $\SUD$} \arrow[r,leftrightarrow]&
+\text{Shift $\SUD$} \arrow[r,leftrightarrow]&
+\SUD \\
+\text{Subset Shift $\LAD$} \arrow[r,dotted,leftrightarrow]&
+\text{Shift $\LAD$} \arrow[r,dotted,leftrightarrow] &
+\LAD \arrow[u,leftrightarrow]
+\end{tikzcd}
+\end{center}
+Through the vertical arrow $\theta:\LAD \to \SUD$ (\cref{p:IJ level bijection}) this proves the equivalence of the only two diagonals.
+Furthermore, by duality we induce the dotted arrows of the diagram, which provides shift descriptions of the $\LAD$ diagonal ... .
+\\\\
+We first recall the necessary theory to describe the subset shift $\SUD$ which generates all facets by performing shifts on strong complementary partitions. We use similar notation to the recent paper \cite{saneblidzeComparingDiagonalsAssociahedra2022}.
 \begin{definition}
-    A pair of ordered partitions $(\sigma,\tau)$ is called \emph{strong complementary} if $\sigma$ is obtained from a permutation by merging the adjacent elements which are decreasing, and $\tau$ is obtained from the same permutation by merging the adjacent elements which are increasing.
+A pair of ordered partitions $(\sigma,\tau)$ is called \emph{strong complementary} if $\sigma$ is obtained from a permutation by merging the adjacent elements which are decreasing, and $\tau$ is obtained from the same permutation by merging the adjacent elements which are increasing.
+Let $SCP$ denote the set of all strong complementary pairs.
 \end{definition}
 
-An example is shown in \cref{fig:strong-complementary}. The same argument as in \cref{l:u-well-defined} shows that the underlying pair of partitions is an essential complementary pair. 
-Moreover we see directly that any path between adjacent vertices has length $2$, and that its maxima is always traversed from left to right, hence all strong complementary pairs are in $\SU$. 
-
-\begin{figure}[h!]
+\begin{example}\label{ex:strong-complementary}
+The SCP associated to the permutation $2573641$ is,
+\begin{center}
 \begin{tikzpicture}[scale=.7]  
 \node (p) at (0, 0) {$2|5|37|146 \times 257|36|4|1$};
 \node (1) at (-1.5, -1) {$2$};
@@ -839,9 +857,127 @@ Moreover we see directly that any path between adjacent vertices has length $2$,
 \draw[-] (4)--(8);
 %
 \end{tikzpicture}
-\caption{The strong complementary pair associated to the partition $2|5|7|3|6|4|1$.}
-\label{fig:strong-complementary}
-\end{figure}
+\end{center}
+Observe that the permutation can be read off the graph of the SCP by a vertical down slice through the edges of the graph.
+\end{example}
+
+We make the following observations about SCPs. Firstly, the same argument as in \cref{l:u-well-defined} shows that the underlying pair of partitions is an essential complementary pair.
+Moreover, for $(\sigma,\tau)\in SCP$ we observe that 
+\begin{enumerate}
+    \item The unique path $\gamma$ between $\sigma_i|\sigma_{i+1}$ is $( \min \sigma_i, \max \sigma_{i+1} )$, and $\min \sigma_i< \max \sigma_{i+1}$.
+    \item The unique path $\gamma$ between $\tau_i|\tau_{i+1}$ is $( \max \tau_i, \min \tau_{i+1} )$, and $\min \tau_{i+1}< \max \tau_{i}$.
+\end{enumerate}
+From this observation and the ordering function $o':\EC\to \SUD$ (explored in \cref{ex:theta and path translation}) it is immediate that $SCP\subset\SUD$, i.e. the maximal elements are being traversed right to left.
+
+\begin{definition} \label{def:subset shifts}
+Let $(\sigma,\tau) = (\sigma_1|...|\sigma_k,\tau_1|...|\tau_l)$ be an ordered partition pair, and let $M_i\subset (\sigma_{i}\setminus \min \sigma_{i})$ be a non-empty subset such that $\min M_i> \max \sigma_{i+1}$. For this set we define the \emph{subset right shift operator} by
+\begin{align*}
+    R_{M_i}(\sigma):= \sigma_1|...|\sigma_i \setminus M_i|\sigma_i \sqcup M_i|...|\sigma_k
+\end{align*}
+Dually, let $M_{i+1}\subset (\tau_{i+1}\setminus \min \tau_{i+1})$  be a non-empty subset such that $\min M_{i+1}> \max \tau_{i}$. For this set we define the \emph{subset left shift operator} by
+\begin{align*}
+    L_{M_{i+1}}(\tau):= \tau_1|...|\tau_i \sqcup M_{i+1}|\tau_i \setminus M_{i+1}|...|\tau_l
+\end{align*}
+For $l\geq 1$, let $\textbf{M} = (M_{i_1},...,M_{i_l}) \in [n]^{l}$, be such that $1\leq i_1 < i_2 ... < i_l\leq k-1$, and each of the iterated compositions $R_\mathbf{M}(\sigma) := R_{M_{i_l}}...R_{M_{i_1}}(\sigma)$ are well-defined.
+Similarly, for $m\geq 1$ let $\textbf{N} = (N_{i_m},...,N_{i_1}) \in [n]^{m}$ be such that $2\leq i_1 < i_2 ... < i_m\leq k$, and each of the iterated compositions  $L_\mathbf{N}(\tau) := L_{N_{i_1}}...L_{N_{i_m}}(\tau)$ are well-defined. We define the case $R_{\emptyset}\sigma := \sigma$ and $L_{\emptyset}\tau := \tau$. Then we denote,
+\begin{align*}
+    A_{\sigma}\times B_\tau:= \bigsqcup_{\mathbf{M},\mathbf{N}} \{R_\mathbf{M}(\sigma)\times L_\mathbf{N}(\tau) \}
+\end{align*}
+where the union is over all valid $\textbf{M},\textbf{N}$ such that the iterated operators are well-defined.
+\end{definition}
+
+See ... for an example.
+Observe that the left shift operator moves elements to the left, but acts on the right ordered partition. Dually, the right shift operators moves elements to the right but acts on the left ordered partition. We have departed from the notation of \cite{saneblidzeComparingDiagonalsAssociahedra2022} in two ways. Firstly we have reversed the indexing of the left shift operator, and secondly we have omitted the case $M=\emptyset$ whose corresponding operator was the identity. As we have omitted the case $M=\emptyset$, we have altered our indexing set from $\{1,2,...,d\}$ to the increasing sequence $i_1<...<i_d$. \Kurt{better...}
+\begin{proposition}[Theorem \cite{SaneblidzeUmble04}, Restated in \cite{saneblidzeComparingDiagonalsAssociahedra2022}]
+The subset-shift $SU$ diagonal is generated by all valid subset-shifts of SCPs,
+\begin{align*}
+    \SUD = \bigsqcup_{(\sigma,\tau) \in SCP} A_\sigma \times B_\tau
+\end{align*}
+
+\end{proposition}
+
+
+We now make an interesting observation, whose proof is key to an equivalent definition of the $\SUD$ diagonal. 
+\begin{lemma} \label{lem:SU subset conserves maximal element of paths}
+The $\SU$ subset shift operators conserve the maximal element of paths. In particular, given an SCP $(\sigma,\tau)$ and a valid shift of it $(R_{\mathbf{M}}(\sigma),L_{\mathbf{N}}(\tau))$. Let $\gamma_{i,j}$ denote the unique path between blocks $\sigma_i,\sigma_j$ (similarly $\tau_i,\tau_j$) and let $\gamma'_{i,j}$ denote the unique path between blocks $R_{\mathbf{M}}(\sigma)_i,R_{\mathbf{M}}(\sigma)_j$ (similarly $L_{\mathbf{N}}(\tau)_i ,L_{\mathbf{N}}(\tau)_j$), then $\max \gamma_{i,j} = \max \gamma'_{i,j} $.
+\end{lemma}
+
+\begin{proof}
+We consider the right subset shift operator, and the left subset shift operator proceeds similarly.
+We will prove the result inductively by assuming that for $(R_{\mathbf{M}}(\sigma),L_{\mathbf{N}}(\tau))$ we have $\max \gamma_{i,j} = \max \gamma'_{i,j}$, and then showing that if we apply a valid operator $R_{M_k}$ then we conserve this maximal element. 
+As $(\sigma,\tau)$ is an SCP, we know the maximal element of the path connecting the blocks $\sigma_k|\sigma_{k+1}$ is $\max \sigma_{k+1}$. 
+Hence, by the inductive hypothesis, we know that $\max \delta_{k,k+1} = \max \sigma_{k+1}$ where $\delta_{k,k+1} $ is the unique path connecting $R_{\mathbf{M}}(\sigma)_k|R_{\mathbf{M}}(\sigma)_{k+1}$ in $(R_{\mathbf{M}}(\sigma),L_{\mathbf{N}}(\tau))$.
+Furthermore, because $R_{M_k}$ is a valid operator we know that, $k$ is greater than the maximal index used by $\mathbf{M}$ so $\max \sigma_{k+1} = \max R_{\mathbf{M}}(\sigma)_{k+1}$, and that $\min M_k > \max R_{\mathbf{M}}(\sigma)_{k+1}$.
+So combining these we know, 
+\begin{align}\label{eq:shift subset dominates adj path}
+    \min M_k > \max R_{\mathbf{M}}(\sigma)_{k+1} = \max \sigma_{k+1} = \max \delta_{k,k+1}
+\end{align}
+With this observation in hand, we explore how the shift operator $R_{M_k}$ effects paths. 
+Let $\gamma$ be a path between two blocks on one side of $(R_{\mathbf{M}}(\sigma),L_{\mathbf{N}}(\tau))$, i.e. $R_{\mathbf{M}}(\sigma)_i \xrightarrow{\gamma} R_{\mathbf{M}}(\sigma)_j$ or $L_{\mathbf{N}}(\tau)_i \xrightarrow{\gamma} L_{\mathbf{N}}(\tau)_j$, and consider the path $\gamma'$ between the same blocks, by indices, in $(R_{M_k}R_{\mathbf{M}}(\sigma),L_{\mathbf{N}}(\tau))$. For now, we assume the path $\gamma$ is not to/from either (or both) of the blocks $R_{\mathbf{M}}(\sigma)_k, R_{\mathbf{M}}(\sigma)_{k+1}$. There are four cases to consider. 
+\begin{enumerate}
+    \item $\gamma$ does not contain an element of $M_k$. It is thus unaffected by the shift, so $\gamma' = \gamma$.
+    \item $\gamma$ contains two elements of $M_k$. In which case we still have $\gamma'=\gamma$ (in path elements) but $\gamma'$ will step through the $(k+1)$th block instead of $\gamma$ stepping through the $k$th block.
+    \item $\gamma$ contains one element $m\in M_k$, i.e. $\gamma = \alpha m \beta$. Then there are two cases to consider
+    \begin{enumerate}
+        \item $\beta$ does not use any steps of $\delta_{k+1,k}$, in which case $\gamma' = \alpha m \delta_{k+1,k} \beta$.
+        This is a path in the tree of $(R_{M_k}R_{\mathbf{M}}(\sigma),L_{\mathbf{N}}(\tau))$ with no repeated steps, as such it must be the unique minimal path. 
+        (There cannot be another path as this would induce a cycle on the tree.)
+        \item $\beta$ uses steps of $\delta_{k+1,k}$, in which case $\gamma' = \alpha m (\delta_{k+1,k}\setminus \beta)(\beta \setminus \delta_{k+1,k})$. This follows, as we know that $\beta$ must follow the path $\delta_{k,k+1}$ for some time before diverging ($\beta$ could also be a subset of $\delta_{k,k+1}$, in which case it will never diverge). As such, the path $(\delta_{k+1,k}\setminus \beta)$ reaches the point of divergence from $(R_{\mathbf{M}}(\sigma))_{k+1}$ instead of $(R_{\mathbf{M}}(\sigma))_{k}$, then the path $(\beta \setminus \delta_{k+1,k})$ completes the rest of the route unchanged.
+    \end{enumerate}
+    \item $\gamma$ contains more than two elements of $M_k$. This is impossible, as $\gamma$ would not be a minimal path on a tree.
+\end{enumerate}
+We now consider the cases where $\gamma$ is a path to/from at least one of $(R_{\mathbf{M}}(\sigma))_k,(R_{\mathbf{M}}(\sigma))_{k+1}$. We will use $j$ to denote any other arbitrary index. We assume that $\gamma$ contains a single element $m\in M_k$ (as all other cases lead to contradictions or are trivially affected by the shift in similar logic to the prior). Then $\gamma$ is altered by the shift to $\gamma'$ as follows,
+\begin{itemize}
+    \item if $\gamma$ connects $(R_{\mathbf{M}}(\sigma))_j$ and $(R_{\mathbf{M}}(\sigma))_k$, then $\gamma = \alpha m \mapsto \gamma' = \alpha m \delta_{k+1,k} $
+    \item if $\gamma$ connects $(R_{\mathbf{M}}(\sigma))_j$ and $(R_{\mathbf{M}}(\sigma))_{k+1}$, then $\gamma = \alpha m \delta_{k,k+1} \mapsto \gamma' = \alpha m $
+    \item if $\gamma$ connects $(R_{\mathbf{M}}(\sigma))_k$ and $(R_{\mathbf{M}}(\sigma))_{k+1}$, then $\gamma = \delta_{k,k+1}$ so this implies that $m\in \delta_{k,k+1}$, which is a contradiction as $m> \max \delta_{k,k+1}$.
+\end{itemize}
+Observe all (non-trivial or non-contradictory) paths $\gamma'$ contain $m>\min M_k$ and either some addition or deletion by $\delta_{k,k+1}$. It thus follows from \cref{eq:shift subset dominates adj path} that $\max \gamma' = \max \gamma$, in each case, the maximal element will either be $m$ or in $\alpha,\beta$.
+\end{proof}
+The key inequality of the inductive proof was \cref{eq:shift subset dominates adj path}, and the central equality of this chain of inequalities arose from the assumption that $k$ is greater than the maximal index used by $\mathbf{M}$. 
+It turns out we can drop this order assumption by directly assuming $\min M_k > \delta_{k,k+1}$.
+Furthermore, once we have dropped the order assumption, we can generate our more complicated subset shifts by chains of singleton set shifts. This motivates the following definition.
+
+\begin{definition} \label{def:critical SU shift}
+Let $(\sigma,\tau)$ be a pair of ordered partitions, and let $\rho \in (\sigma_i \setminus \min \sigma_i)$ such that $\rho>\max \sigma_{i+1}$ and $\rho>\max \gamma$ where $\gamma$ is the unique path between $\sigma_i$ and $\sigma_{i+1}$. Such an element $\rho$ is said to be \emph{critical}. 
+Similarly, we define the critical elements of $\tau$ to be, $\rho \in (\tau_{i+1} \setminus \min\tau_{i+1})$ with $\rho > \max \tau_{i}$ and $\rho > \max \gamma$. 
+The right and left shift operators are defined on singleton sets, and we will denote these shift operators being applied to critical elements as $R_{\rho}$ and $L_{\rho}$.
+\end{definition}
+
+As we have assumed the necessary feature of the proof of \cref{lem:SU subset conserves maximal element of paths}, we have the immediate corollary.
+
+\begin{corollary}
+The critical left and right shift operators conserve the maximal element of paths.
+\end{corollary}
+
+\begin{definition}
+The facets of the shift $\SUD$ are $SCP$s, and their image under iterated applications of critical left and right shift operators.
+\end{definition}
+
+It turns out that this is equivalent to the subset shift $\SUD$ diagonal. Which is to say that the extra path condition is equivalent to the increasing/decreasing sequence restriction on the iterated subset shifts. Note the path information does not subsume the other information and we will illustrate this explicitly in ... . \Kurt{A good example is the SUD version of existing example}
+
+\begin{proposition}
+The subset shift and shift definitions of the $\SUD$ diagonal coincide.
+\end{proposition}
+\Kurt{Got bogged down will resume from here tomorrow.}
+\Kurt{This proof is trivial alteration of existing.}
+
+\begin{proof}
+    We analyse the left shift operator, the case of the right shift is similar. 
+    First, we observe that any subset left shift $L^{i}(\sigma)$ can be decomposed in a series of left shifts: since $\max \rho < \min \gamma$ by the proof of \cref{l:minima-invariance-subset}, we can first shift $\max \rho$ to the left, then $\max (\rho \setminus \max \rho)$, and so on until the entire subset $\rho$ has been shifted to the left. 
+    This shows that any facet in the second definition of the dual SU diagonal is also a facet in the first definition. 
+
+    For the reverse inclusion, we show by induction on the number of left shifts that a pair $(\sigma',\tau)$ where $\sigma'$ has been obtained by iterated left shifts can also be obtained by iterated subset left shifts, that is, can be written in the form $(L^{i_k}\cdots L^{i_1}(\sigma), \tau)$.
+    The base case of a strong complementary pair is trivial. 
+    Suppose that we are given a pair $(\sigma',\tau)$ where $\sigma'$ has been obtained by a sequence of $l+1$ left shifts. 
+    By the induction hypothesis, the first $l$ left shifts can be rewritten as a sequence of subset left shifts, i.e. in the form $L^{i_k}\cdots L^{i_1}(\sigma)$ where $i_1 > \cdots > i_k$ are descreasing.
+    Now suppose that the $(l+1)$-th left shift occurs between $L^{i_k}\cdots L^{i_1}(\sigma)_j$ and $L^{i_k}\cdots L^{i_1}(\sigma)_{j+1}$, with $j> i_k$ (otherwise, we are done!). 
+    Let us denote by $\gamma$ the unique path between $L^{i_k}\cdots L^{i_1}(\sigma)_j$ and $L^{i_k}\cdots L^{i_1}(\sigma)_{j+1}$.
+    By definition, we have that the critical element $\rho$ satisfies $\rho < \min \gamma$.  
+    But by \cref{l:minima-invariance-subset}, this minimum is the same as the minimum of the path between $\sigma_j$ and $\sigma_{j+1}$, which is just $\min \sigma_j$. 
+    Thus we have $\rho < \min \sigma_j$ (as well as $\rho < \min L^{i_k}\cdots L^{i_1}(\sigma)_j$, by criticality), and so $\rho$ can be integrated in a new or an existing subset left shift of the family $L^{i_k}\cdots L^{i_1}$, which completes the proof. 
+    %also: maximum elements of each vertex never changes! so rho \neq max of its vertex
+\end{proof}
 
 \subsection{Higher algebraic consequences}
 
